objects/Budget__c/fields/Estimated_No_of_Accounts_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Estimated_No_of_Accounts_Engaged__c</fullName>
    <label>Estimated No. of Accounts Engaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>