objects/Budget__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>