objects/Budget__c/fields/Ext_Sec_Rev_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Ext_Sec_Rev_Rollup__c</fullName>
    <label>Ext Sec Rev Rollup</label>
    <summarizedField>Budget_Line_Item__c.Sec_Review_Required_NUm__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>