objects/Budget__c/fields/Facilities_Rent_Line_Item_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Rent_Line_Item_Rollup__c</fullName>
    <label>Facilities Rent Line Item Rollup</label>
    <summaryFilterItems>
        <field>Budget_Line_Item__c.Purchase_Item_Type__c</field>
        <operation>equals</operation>
        <value>Rent</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>