objects/Budget__c/fields/Finance_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Notes__c</fullName>
    <label>Finance Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>