objects/Budget__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will auto populate based on Department &amp; Region combination</inlineHelpText>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets2</relationshipName>
    <type>Lookup</type>
</CustomField>