objects/Budget__c/fields/Hardware_Included__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Included__c</fullName>
    <inlineHelpText>Does the solution require that Tanium IT procure any hardware? If so, are there documented requirements? *</inlineHelpText>
    <label>Hardware Included</label>
    <type>TextArea</type>
</CustomField>