objects/Budget__c/fields/How_the_capability_currently_delivered__c.field-meta.xml
<CustomField>
    <fullName>How_the_capability_currently_delivered__c</fullName>
    <inlineHelpText>If not new, how is the capability currently delivered today? How will this solution improve the current methodology already used to deliver this capability?</inlineHelpText>
    <label>How the capability currently delivered</label>
    <type>TextArea</type>
</CustomField>