objects/Budget__c/fields/How_Will_Access_be_Granted__c.field-meta.xml
<CustomField>
    <fullName>How_Will_Access_be_Granted__c</fullName>
    <inlineHelpText>Please describe how you administer/grant access to this application and its data</inlineHelpText>
    <label>How Will Access be Granted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisioned by IT</fullName>
            </value>
            <value>
                <fullName>Provisioned by Finance Systems</fullName>
            </value>
            <value>
                <fullName>Provisioned by Sales Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>