objects/Budget__c/fields/In_Budget_Expense__c.field-meta.xml
<CustomField>
    <fullName>In_Budget_Expense__c</fullName>
    <label>In Budget Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
                <isActive>false</isActive>
                <label>Unsure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>