objects/Budget__c/fields/Integration_Solution_Details__c.field-meta.xml
<CustomField>
    <fullName>Integration_Solution_Details__c</fullName>
    <inlineHelpText>If automatically interfacing with another solution (e.g. Salesforce) then include solution name and specific data fields (e.g. customer name, customer location, opportunity amount).</inlineHelpText>
    <label>Integration Solution Details</label>
    <type>TextArea</type>
</CustomField>