objects/Budget__c/fields/Is_this_a_New_Parent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_New_Parent_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a New Parent Budget?</label>
    <type>Checkbox</type>
</CustomField>