objects/Budget__c/fields/Is_This_For_TAM_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_This_For_TAM_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is This For TAM Week?</label>
    <type>Checkbox</type>
</CustomField>