objects/Budget__c/fields/Is_this_related_to_Technical_Training__c.field-meta.xml
<CustomField>
    <fullName>Is_this_related_to_Technical_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this related to Technical Training?</label>
    <type>Checkbox</type>
</CustomField>