objects/Budget__c/fields/Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Amount__c</fullName>
    <description>Sum of Line Item Totals</description>
    <label>Line Item Amount</label>
    <summarizedField>Budget_Line_Item__c.Line_Item_Total__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>