objects/Budget__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <label>Line Item Count</label>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>