objects/Budget__c/fields/List_View_Formula__c.field-meta.xml
<CustomField>
    <fullName>List_View_Formula__c</fullName>
    <formula>IF( OR(Requestor__c = $User.Id, Budget_Owner__c  = $User.Id),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List View Formula</label>
    <type>Checkbox</type>
</CustomField>