objects/Budget__c/fields/Most_Recent_Access_Review__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Access_Review__c</fullName>
    <inlineHelpText>If this is an active application, when was the most recent access review? (ex: To look for former employees who are still active )</inlineHelpText>
    <label>Most Recent Access Review</label>
    <length>100</length>
    <type>Text</type>
</CustomField>