objects/Budget__c/fields/MSA_or_PO_T_Cs_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>MSA_or_PO_T_Cs_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA or  PO T&amp;Cs Confirmation</label>
    <type>Checkbox</type>
</CustomField>