objects/Budget__c/fields/MSA_Required__c.field-meta.xml
<CustomField>
    <fullName>MSA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA Required</label>
    <type>Checkbox</type>
</CustomField>