objects/Budget__c/fields/MSA_Required_Rollup__c.field-meta.xml
<CustomField>
    <fullName>MSA_Required_Rollup__c</fullName>
    <label>MSA Required Rollup</label>
    <summarizedField>Budget_Line_Item__c.MSA_Required_cb__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>