objects/Budget__c/fields/Order_Form_Required_Roll__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Required_Roll__c</fullName>
    <label>Order Form Required Roll</label>
    <summarizedField>Budget_Line_Item__c.Order_Form_Required_num__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>