objects/Budget__c/fields/Other_Application_Storage__c.field-meta.xml
<CustomField>
    <fullName>Other_Application_Storage__c</fullName>
    <inlineHelpText>Is there anywhere else the application&apos;s information would be stored or transferred to?</inlineHelpText>
    <label>Other Application Storage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>