objects/Budget__c/fields/Parent_Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Budget_Name__c</fullName>
    <formula>Parent_Budget__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Budget Name</label>
    <type>Text</type>
</CustomField>