objects/Budget__c/fields/Personal_Information_Collected_By_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Personal_Information_Collected_By_Vendor__c</fullName>
    <inlineHelpText>Will the vendor collect any personal information from Tanium in the course of providing the services?</inlineHelpText>
    <label>Personal Information Collected By Vendor</label>
    <type>TextArea</type>
</CustomField>