objects/Budget__c/fields/PO_created_Date_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>PO_created_Date_NetSuite__c</fullName>
    <description>Date PO was created In Netsuite</description>
    <inlineHelpText>This Field is updated by Process Builder and reflects the Date PO was created In NetSuite</inlineHelpText>
    <label>PO created Date NetSuite</label>
    <type>DateTime</type>
</CustomField>