objects/Budget__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>PO Number In NetSuite</description>
    <inlineHelpText>This Field is updated by Process Builder and reflects the PO number in Netsuite</inlineHelpText>
    <label>PO Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>