objects/Budget__c/fields/Potential_Sourced_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Potential_Sourced_Accounts__c</fullName>
    <label>Target Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>