objects/Budget__c/fields/Procurement_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Approval_Notes__c</fullName>
    <label>Procurement Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>