objects/Budget__c/fields/Procurement_E_Staff_Approver__c.field-meta.xml
<CustomField>
    <fullName>Procurement_E_Staff_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This will auto populate based on Department &amp; Region combination</inlineHelpText>
    <label>Procurement E Staff Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets1</relationshipName>
    <type>Lookup</type>
</CustomField>