objects/Budget__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <label>Purchase Justification Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>