objects/Budget__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <inlineHelpText>Please tell us where your service, goods or event will be held</inlineHelpText>
    <label>Program Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>