objects/Budget__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <inlineHelpText>Free text form - make it specific to your request</inlineHelpText>
    <label>Purchase Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>