objects/Budget__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <inlineHelpText>Contact term start date or event or subscription period start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>