objects/Budget__c/fields/Project_Expense__c.field-meta.xml
<CustomField>
    <fullName>Project_Expense__c</fullName>
    <label>Project Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAM Week - quarterly</fullName>
            </value>
            <value>
                <fullName>Annual SKO</fullName>
            </value>
            <value>
                <fullName>New Hire Training Week</fullName>
            </value>
            <value>
                <fullName>VP Team Offsite</fullName>
            </value>
            <value>
                <fullName>Presidents Club</fullName>
            </value>
            <value>
                <fullName>Tanium User Conference</fullName>
            </value>
            <value>
                <fullName>North Carolina Office</fullName>
            </value>
            <value>
                <fullName>IPO Costs</fullName>
            </value>
            <value>
                <fullName>Quarterly DEV Week</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>G&amp;A</fullName>
            </value>
            <value>
                <fullName>TAM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>POD Week</fullName>
            </value>
            <value>
                <fullName>HQ - 2100 Buildout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>