objects/Budget__c/fields/Read_Only_Users__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Users__c</fullName>
    <inlineHelpText>Who would have ready-only access?</inlineHelpText>
    <label>Read Only Users</label>
    <type>TextArea</type>
</CustomField>