objects/Budget__c/fields/Receive_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Receive_By_Date__c</fullName>
    <inlineHelpText>Date when you expect to receive goods or services</inlineHelpText>
    <label>Receive By Date</label>
    <type>Date</type>
</CustomField>