objects/Budget__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Has_NS_Access__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets4</relationshipName>
    <type>Lookup</type>
</CustomField>