objects/Budget__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Either you or the person you are entering the PO for</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>