objects/Budget__c/fields/Requestor_Department__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Department__c</fullName>
    <formula>Requestor__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Department</label>
    <type>Text</type>
</CustomField>