objects/Budget__c/fields/Requestor_Region__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Region__c</fullName>
    <formula>Requestor__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Region</label>
    <type>Text</type>
</CustomField>