objects/Budget__c/fields/Risk_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Acceptance__c</fullName>
    <inlineHelpText>Considering the worst that could happen among these three scenarios, do you accept the risk that this application inherently presents?</inlineHelpText>
    <label>Do you accept Risk that system  presents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>