objects/Budget__c/fields/ROI_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>ROI_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI Confirmation</label>
    <type>Checkbox</type>
</CustomField>