objects/Budget__c/fields/ROI_Pending__c.field-meta.xml
<CustomField>
    <fullName>ROI_Pending__c</fullName>
    <formula>AND( ROI_Required__c = TRUE &amp;&amp;  ROI_Confirmation__c &lt;&gt;TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Pending</label>
    <type>Checkbox</type>
</CustomField>