objects/Budget__c/fields/ROI_Required__c.field-meta.xml
<CustomField>
    <fullName>ROI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI Required</label>
    <type>Checkbox</type>
</CustomField>