objects/Budget__c/fields/ROI_Required_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ROI_Required_Rollup__c</fullName>
    <label>ROI Required Rollup</label>
    <summarizedField>Budget_Line_Item__c.ROI_Required_NUM__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>