objects/Budget__c/fields/SaaS_or_On_Premises__c.field-meta.xml
<CustomField>
    <fullName>SaaS_or_On_Premises__c</fullName>
    <label>SaaS or On Premises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>On Premises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>