objects/Budget__c/fields/Sec_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Sec_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sec Review Required</label>
    <type>Checkbox</type>
</CustomField>