objects/Budget__c/fields/Security_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Security_Review_Complete__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(What_capability_will_solution_provide__c)), NOT(ISBLANK(How_the_capability_currently_delivered__c)), NOT(ISBLANK(Application_Owner__c)), NOT(ISBLANK(Read_Only_Users__c)), NOT(ISPICKVAL(How_Will_Access_be_Granted__c,&quot;&quot;)), NOT(ISPICKVAL(Third_Party_Support_Involved__c,&quot;&quot;)),NOT(ISBLANK(Integration_Solution_Details__c)), NOT(ISBLANK(Other_Application_Storage__c)), NOT(ISBLANK(Hardware_Included__c)), 
NOT(ISBLANK(Most_Recent_Access_Review__c)),NOT(ISBLANK(What_Kind_of_Software_Solution__c)),NOT(ISBLANK(Data_Access__c)), NOT(ISBLANK(Data_Description__c)),NOT( ISPICKVAL(Data_Disclosure_Severity__c,&quot;&quot;)),NOT(ISPICKVAL(Data_Corruption_Severity__c,&quot;&quot;)), NOT(ISPICKVAL(Service_Interruption_Impact__c, &quot;&quot;)), NOT(ISBLANK(Whats_the_worst_that_could_happen__c)),NOT( ISPICKVAL(Risk_Acceptance__c,&quot;&quot;))),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Review Complete</label>
    <type>Checkbox</type>
</CustomField>