objects/Budget__c/fields/Skip_Estaff_Approval__c.field-meta.xml
<CustomField>
    <fullName>Skip_Estaff_Approval__c</fullName>
    <formula>IF( Procurement_E_Staff_Approver__c =  Budget_Owner__c &amp;&amp; Approximate_Amount_In_USD__c &gt;4999 , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skip Budget Owner Approval</label>
    <type>Checkbox</type>
</CustomField>