objects/Budget__c/fields/SOW_Pending__c.field-meta.xml
<CustomField>
    <fullName>SOW_Pending__c</fullName>
    <formula>AND( SOW_Required__c = TRUE, SOW_Confirmation__c &lt;&gt; TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Pending</label>
    <type>Checkbox</type>
</CustomField>