objects/Budget__c/fields/SOW_Required__c.field-meta.xml
<CustomField>
    <fullName>SOW_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Required</label>
    <type>Checkbox</type>
</CustomField>