objects/Budget__c/fields/SOW_Required_Rollup__c.field-meta.xml
<CustomField>
    <fullName>SOW_Required_Rollup__c</fullName>
    <label>SOW Required Rollup</label>
    <summarizedField>Budget_Line_Item__c.SOW_Required_NUM__c</summarizedField>
    <summaryForeignKey>Budget_Line_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>