objects/Budget__c/fields/TAM_Week_Budget_Tracker_Reference__c.field-meta.xml
<CustomField>
    <fullName>TAM_Week_Budget_Tracker_Reference__c</fullName>
    <inlineHelpText>Which line item in the approved TAM week budget does this fall under</inlineHelpText>
    <label>TAM Week Budget Tracker Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>