objects/Budget__c/fields/Tanium_disclose_personal_info_to_vendor__c.field-meta.xml
<CustomField>
    <fullName>Tanium_disclose_personal_info_to_vendor__c</fullName>
    <inlineHelpText>&quot;Personal information&quot; means any information that can be used to identify an individual, such as name, SSN, email address, phone number, IP address, or device IDs.</inlineHelpText>
    <label>Tanium disclose personal info to vendor</label>
    <type>TextArea</type>
</CustomField>