objects/Budget__c/fields/Tanium_to_store_personal_info_w_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Tanium_to_store_personal_info_w_Vendor__c</fullName>
    <inlineHelpText>To &quot;store&quot; personal information with the vendor typically arises in the context of hosted services or SaaS where Tanium&apos;s will upload personal information to the vendor&apos;s services (e.g., SFDC, GSuite, Slack)</inlineHelpText>
    <label>Tanium to store personal info w/ Vendor</label>
    <type>TextArea</type>
</CustomField>