objects/Budget__c/fields/Target_Persona__c.field-meta.xml
<CustomField>
    <fullName>Target_Persona__c</fullName>
    <inlineHelpText>Please indicate how many attendees you expect to address with this initiative</inlineHelpText>
    <label>Target Persona(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>CxO</fullName>
            </value>
            <value>
                <fullName>VP IT Ops</fullName>
            </value>
            <value>
                <fullName>Practitioners</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>