objects/Budget__c/fields/Third_Party_Support_Involved__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Support_Involved__c</fullName>
    <description>Will the third party support or be involved in any way with the transfer of monetary funds?</description>
    <label>Third Party Support Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>