objects/Budget__c/fields/Total_No_of_Target_Accounts_Possible__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Target_Accounts_Possible__c</fullName>
    <inlineHelpText>Please indicate how many new accounts you expect to secure through this initiative</inlineHelpText>
    <label>Total No. of Target Accounts Possible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>