objects/Budget__c/fields/Type_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Purchase__c</fullName>
    <label>Type Of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>