objects/Budget__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <formula>TEXT(Business_Department__c)+&quot;.&quot;+TEXT(Business_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Identifier</label>
    <type>Text</type>
</CustomField>