objects/Budget__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <label>Vendor Email</label>
    <type>Email</type>
</CustomField>