objects/Budget__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If your vendor is not in the drop down please fill out the new vendor request form and send to procurement@tanium.com</inlineHelpText>
    <label>Vendor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets1</relationshipName>
    <type>Lookup</type>
</CustomField>